--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@mbamobi/url-resolver",
-  "version": "3.0.1",
+  "version": "4.0.0",
   "description": "Configuration routes to object Http of the Angular2",
   "main": "dist/umd/index.js",
   "typings": "dist/esm/index.d.ts",
   "module": "dist/esm/index.js",
   "scripts": {
     "build": "npm run clean && npm run build:umd && npm run build:esm",
-    "build:qa": "npm run lint && npm run test && npm run build",
+    "build:qa": "npm run lint && npm run build",
     "build:esm": "ngc -p tsconfig-esm.json",
     "build:test": "ngc -p tsconfig-test.json",
     "build:umd": "ngc",
@@ -31,12 +31,31 @@
     "README.md",
     "CHANGELOG.md"
   ],
+  "devDependencies": {
+    "@angular/common": "~5.0.0",
+    "@angular/compiler": "~5.0.0",
+    "@angular/compiler-cli": "~5.0.0",
+    "@angular/core": "~5.0.0",
+    "@angular/http": "~5.0.0",
+    "@angular/platform-browser": "~5.0.0",
+    "@angular/platform-browser-dynamic": "~5.0.0",
+    "@mbamobi/configuration": "^4.0.0",
+    "codelyzer": "^4.0.1",
+    "conventional-changelog-cli": "^1.3.5",
+    "cz-conventional-changelog": "^2.1.0",
+    "rimraf": "^2.6.2",
+    "rxjs": "~5.5.0",
+    "tslint": "^5.8.0",
+    "tslint-eslint-rules": "^4.1.1",
+    "tslint-ionic-rules": "0.0.11",
+    "typescript": "~2.4.2",
+    "zone.js": "~0.8.18"
+  },
   "peerDependencies": {
-    "@angular/core": "^4.0.0",
-    "@angular/http": "^4.0.0",
-    "@mbamobi/configuration": "^3.0.0",
-    "rxjs": "5.1.1",
-    "zone.js": "^0.8.4"
+    "@angular/core": "~5.0.0",
+    "@angular/http": "~5.0.0",
+    "@mbamobi/configuration": "^4.0.0",
+    "typescript": "^2.4.0"
   },
   "repository": {
     "type": "git",
